# napvig-x

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
build-ctests-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  ctests.cbp  qtcsettings.cmake  rules.ninja
build-ctests-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-9d7b496349b652ea2f30.json  cmakeFiles-v1-ef1084c5d7afce1678ba.json  codemodel-v2-068d26f6e48e4c579818.json  index-2022-10-20T13-03-48-0252.json  target-ctests-Debug-ad012179889967499ab4.json
config/: napvig.yaml
ctests/: CMakeLists.txt  CMakeLists.txt.user.eb66f1f  main.cpp
launch/: napvig.launch
scripts/: display.py
src/: frames_tracker.cpp  frames_tracker.h  landscape.cpp  landscape.h  napvig.cpp  napvig.h  napvig_modflow.cpp  napvig_modflow.h  napvig_node.cpp  napvig_node.h  napvig_x.cpp  napvig_x.h  ros_conversions.cpp  ros_conversions.h
src/policy/: exploitative.cpp  exploitative.h  explorative.cpp  explorative.cpp.autosave  explorative.h  landmark.cpp  landmark.h  landmarks.cpp  landmarks.h  legacy.cpp  legacy.h  policy.cpp  policy.h  predictive.cpp  predictive.h
